<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottom_sheet_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/event_name"
        android:textColor="@color/mainActivityTextColor"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/event_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:backgroundTint="@color/mainActivityTextColor"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/event_description"
        android:textColor="@color/mainActivityTextColor"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/event_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:backgroundTint="@color/mainActivityTextColor"
        android:inputType="textImeMultiLine"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12ssp" />
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/add_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="#028377"
            app:mrl_rippleOverlay="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_people_button"
                android:text="@string/add_event"
                android:textColor="#FFF"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>