<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        tools:context=".ui.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/add_people"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:src="@drawable/add"
                    app:tint="@color/iconColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:shadowColor="@color/cardview_shadow_start_color"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/add_family"
                    android:textColor="@color/mainActivityTextColor"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/scan_QR_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:src="@drawable/qr_code_scan"
                    app:tint="@color/iconColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:shadowColor="@color/cardview_shadow_start_color"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/scan_QR_code"
                    android:textColor="@color/mainActivityTextColor"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/all_people"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:src="@drawable/people"
                    tools:layout_editor_absoluteY="49dp"
                    app:tint="@color/iconColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:shadowColor="@color/cardview_shadow_start_color"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/all_family"
                    android:textColor="@color/mainActivityTextColor"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/create_event"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:src="@drawable/calendar"
                    tools:layout_editor_absoluteY="49dp"
                    app:tint="@color/iconColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:shadowColor="@color/cardview_shadow_start_color"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/Events"
                    android:textColor="@color/mainActivityTextColor"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>